# SolarTest

./: CMakeLists.txt  SolarTest.cpp
